2002-08-20  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnmh.el (nnmh-request-list-1): Use %.0f instead of %d to
	avoid arithmetic errors.

2002-07-06  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-topic.el (gnus-topic-indent, gnus-topic-unindent): Change
	cdaar to cdar and car.

	* nnsoup.el (nnsoup-retrieve-headers, nnsoup-request-type) 
	(nnsoup-read-active-file, nnsoup-article-to-area): Ditto.

2002-07-03  Juanma Barranquero  <lektu@terra.es>

	* gnus-sum.el (gnus-summary-highlight): Fix typo.

2002-06-21  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnheader.el (nnheader-file-name-translation-alist): Set the
	default value for MS Windows systems.

	* gnus-ems.el (nnheader-file-name-translation-alist): Removed.

	* nndoc.el (nndoc-mime-digest-type-p): Set proper file-end. 
	* nndoc.el: Add several new types.
	
2002-05-16  Juanma Barranquero  <lektu@terra.es>

	* gnus-art.el (gnus-mime-copy-part): Fix typo.

2002-05-09  Miles Bader  <miles@gnu.org>

	* gnus-cite.el (gnus-cite-blank-line-after-header): New variable.
	(gnus-article-hide-citation): Respect it.

2002-04-12  Juanma Barranquero  <lektu@terra.es>

	* pop3.el (pop3-open-server): Fix typo.

2002-04-12  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* pop3.el (pop3-munge-message-separator): Work if no date.
	Trivial patch from Marius Vollmer <mvo@zagadka.ping.de>.

	* pop3.el (pop3-munge-message-separator): Only use valid date.
	Trivial patch from Michael Welsh Duggan <md5i@cs.cmu.edu>.
	
2002-04-11  Stefan Monnier  <monnier@cs.yale.edu>

	* gnus-sum.el (gnus-update-summary-mark-positions)
	(gnus-summary-toggle-header):
	* gnus-uu.el (gnus-uu-binhex-article, gnus-uu-reginize-string)
	(gnus-uu-expand-numbers, gnus-uu-post-make-mime)
	(gnus-uu-post-encoded):
	* nnfolder.el (nnfolder-possibly-change-group):
	* nnimap.el (nnimap-retrieve-headers):
	* nnmbox.el (nnmbox-create-mbox): Don't assume point-min == 1.

2002-04-08  Stefan Monnier  <monnier@cs.yale.edu>

	* nnml.el (nnml-save-nov, nnml-generate-nov-file):