@@ -1,5 +1,7 @@
 2002-08-20  ShengHuo ZHU  <zsh@cs.rochester.edu>
 
+	* gnus-art.el (gnus-button-url-regexp): Use POSIX regexp if possible.
+
 	* nnmh.el (nnmh-request-list-1): Use %.0f instead of %d to
 	avoid arithmetic errors.
 
